brat/test/golden/error/fanin-not-enough-overs.brat
f(Nat, Nat) -> Vec(Nat, 3)
f = { [\/] }
